--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: rgba(255, 255, 255, 0.87);
+  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,6 +30,6 @@ a:hover {
 }
 
 body {
-  display: flex; 
-  min-height: 100dvh; 
+  max-width: 1200px; 
+  margin: 0 auto; 
 }
