--- a/src/index.css
+++ b/src/index.css
@@ -3,24 +3,21 @@
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: rgba(255, 255, 255, 0.87);
-  /* background-color: #242424; */
+  /* background-color: rgba(255, 255, 255, 0.87); */
+  background-color: var(--snow-white); 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
+  /* Dark Palette */
+  --rich-black: #040d12; 
+  --msu-green: #183d3d; 
+  --wintergreen-dream: #5c8374; 
+  --cadet-gray: #93b1a6; 
+  --snow-white: #f2f0eb; 
 }
 
 * {
