--- a/src/styles/eightball/EightBall.css
+++ b/src/styles/eightball/EightBall.css
@@ -11,13 +11,24 @@
   text-align: center; 
   font-size: 14px; 
   border-radius: 5px; 
-  border: 2px solid #f59212; 
+  border: 2px solid var(--wintergreen-dream); 
+  padding: 0 10px; 
+  background-color: var(--snow-white); 
+  color: var(--msu-green); 
+}
+
+.form__control::placeholder {
+  color: var(--msu-green); 
+} 
+
+.form__control:focus {
+  outline: none; 
 }
 
 .form__note {
   margin: 10px 0; 
   font-size: 14px;
-  color: rgba(248, 178, 73, 0.8);  
+  color: var(--cadet-gray);  
   font-weight: 500; 
   font-style: italic; 
   text-align: center; 
@@ -27,7 +38,7 @@
   display: flex; 
   height: 350px; 
   width: 350px; 
-  background-color: #000; 
+  background-color: var(--rich-black); 
   border-radius: 50%; 
   position: relative; 
   margin: 50px 0; 
@@ -49,7 +60,7 @@
   display: flex; 
   height: 300px; 
   width: 300px; 
-  background-color: #eaeaea;
+  background-color: var(--snow-white);
   position: absolute; 
   border-radius: 50%; 
   top: 25px; 
@@ -73,4 +84,5 @@
   font-size: 18px; 
   font-weight: bold; 
   font-style: italic; 
+  color: var(--msu-green); 
 }
