--- a/src/styles/navbar/Navbar.css
+++ b/src/styles/navbar/Navbar.css
@@ -5,6 +5,7 @@ header {
   top: 0; 
   left: 0; 
   z-index: 3; 
+  background-color: var(--snow-white); 
 }
 
 .nav__links {
@@ -26,10 +27,14 @@ header {
 
 .nav__links ul {
   list-style: none; 
-  margin-right: 20px; 
+  margin-right: 10px; 
 }
 
 .nav__links a {
   color: inherit; 
-  /* index.css will default when hover to #535bf2 */ 
+  text-decoration: none; 
+}
+
+.nav__links a:hover {
+  color: #535bf2;
 }
